Added a page to show steps to upload VR contents and FAQ changes

--- a/public/template/default/index.html
+++ b/public/template/default/index.html
@@ -75,7 +75,7 @@
     <div class=" col-md-12 col-sm-12 col-xs-12">
         <div class="x_panel">
             <div class="x_title">
-                <h2>Testvectors per Feature / Testcontent</h2>
+                <h2>Testvectors per Testcontent</h2>
                 <div class="clearfix"></div>
             </div>
             <div class="x_content">
